# lodash_python

./: .deepsource.toml  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: github-actions-tests.yaml  tests-ci.yaml
lodash_python/: __init__.py  array.py  list.py  main.py  number.py  string.py  tuple.py
lodash_python/_list/: __init__.py
lodash_python/_number/: __init__.py
lodash_python/_string/: __init__.py
lodash_python/_tuple/: __init__.py
lodash_python/list/: __init__.py
lodash_python/number_data/: __init__.py
lodash_python/string_data/: __init__.py
tests/: test_chunk.py  test_main.py  test_trial.py
